--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "geolib": "^3.3.1",
+    "node-geocoder": "^3.27.0",
     "socket.io": "^2.3.0"
   }
 }
